--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dev_dependencies:
     sdk: flutter
   carousel_slider: ^5.0.0
   google_fonts: ^5.1.0
+  curved_navigation_bar: ^1.0.6
   # carousel_slider: ^5.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
