--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ dev_dependencies:
   google_fonts: ^5.1.0
   curved_navigation_bar: ^1.0.6
   video_player: ^2.9.2
-  # carousel_slider: ^5.0.0
+  provider: ^6.1.2
+  cached_network_image: ^3.4.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
