--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dev_dependencies:
   video_player: ^2.9.2
   provider: ^6.1.2
   cached_network_image: ^3.4.1
+  http: ^1.2.2
+  random_string: ^2.3.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
