--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,9 @@ dev_dependencies:
   cached_network_image: ^3.4.1
   http: ^1.2.2
   random_string: ^2.3.1
-  
+  shared_preferences: ^2.3.3
+  webview_flutter: ^4.10.0
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
