--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dev_dependencies:
   random_string: ^2.3.1
   shared_preferences: ^2.3.3
   webview_flutter: ^4.10.0
+  url_launcher: ^6.3.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
